# BayesDx-UQ

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
bayesdx/: __init__.py  calibration.py  conformal.py  data.py  eval.py  hydra_main.py  metrics.py  models.py  train.py  uncertainty.py  utils.py  viz.py
configs/: config.yaml
configs/data/: synthetic.yaml
configs/eval/: default.yaml
configs/model/: mc_dropout.yaml
configs/viz/: default.yaml
data/: README.md
docs/: paper-outline.md
docs/paper-latex/: main.tex
notebooks/: README.md
scripts/: fetch_chexpert.py  fetch_ham10000.py
tests/: test_metrics.py  test_train.py
